--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ default: &default
 development:
   <<: *default
   database: discovery_citation_dev_db
-  username: discovery_citation
+  username: shuzhou
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
